<resources>
    <string name="app_name">AndroidSimpleChat</string>

    <string name="action_settings">Settings</string>
    <string name="action_account">Account</string>
    <string name="action_online_users">Users</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="enter_name">Enter your name</string>
    <string name="btn_send">Send</string>

    <string name="title_chat_list">Chat List</string>
    <string name="title_user_info">User Info</string>
    <string name="title_chat_room">Chat Room</string>
    <string name="title_chat_room_members">Chat Room Memebers</string>
    <string name="title_sign">Sign</string>

    <string name="btn_authorization">Sign In</string>
    <string name="btn_registration">Sign Up</string>

    <!-- Login Fragment -->
    <string name="login_edittext_hint">login</string>
    <string name="password_edittext_hint">password</string>
    <string name="nickname_edittext_hint">nickname</string>
    <string name="login_button_text">Log In</string>
    <string name="go_registration_button_text">Not a member? Sign up now.
    </string>
    <string name="go_authorization_button_text">Already have an account? Sign
        in.
    </string>

    <!-- Add Chat Fragment -->
    <string name="chat_name_edittext_hint">Name of Chat</string>
    <string name="chat_description_edittext_hint">Description</string>
    <string name="create_button_text">Create Chat Room</string>
    <string name="add_chat_room_title">New Chat Room</string>

    <!-- Set user info fragment -->
    <string name="user_status_edittext_hint">status</string>
    <string name="change_user_info_button">save</string>


</resources>
